--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,34 @@
  *= require_tree .
  *= require_self
  */
+
+ .header {
+  font-size: 30px;
+  padding-left: 20px;
+ }
+
+.question, .answer {
+  width: 500px;
+  font-family: sans-serif;
+  font-size: 20px;
+  padding: 0px 20px;
+  margin-left: 20px;
+  border-left: solid gray 4px;
+}
+
+.form {
+  width: 500px;
+  font-family: sans-serif;
+  font-size: 20px;
+  padding: 20px 20px;
+  margin-left: 20px;
+}
+
+.answer {
+  background-color: bisque;
+}
+
+.link {
+  font-size: 15px;
+  padding-left: 20px;
+}
